--- a/templates/user_info.html
+++ b/templates/user_info.html
@@ -26,9 +26,9 @@
                     <span>未登录，跳转到首页...</span>
                     <script type="text/javascript">
                         window.location.href = "/"
-                    </script>
+                    </script>w4  
                 {% endif %}
             </div>
-        </div>
+        </div> 
     </div>
 {% endblock %}
